[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lingtai-wechat"
version = "0.1.0"
description = "LingTai WeChat MCP server — iLink Bot API client with LICC inbox callback."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
lingtai-wechat = "lingtai_wechat.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lingtai_wechat"]
